--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ charset-normalizer==3.1.0
 click==7.1.2
 colorama==0.4.6
 cymem==2.0.7
-en-core-sci-lg==0.4.0
+en-core-sci-lg @ https://s3-us-west-2.amazonaws.com/ai2-s2-scispacy/releases/v0.4.0/en_core_sci_lg-0.4.0.tar.gz
 Flask==2.0.3
 idna==3.4
 itsdangerous==2.1.2
